# rust_server

./: .env  Cargo.toml  data.json
src/: config.rs  hello_route.rs  json_func.rs  main.rs  models.rs
