[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.1"
env_logger = "0.9.0"
serde_json = "1.0.79"
serde_derive = "1.0.136"